# abrigo-analytics

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
data/: README.md  manifest.yaml
memory/: MEMORY.md  feedback_agent_orchestration.md  feedback_agent_scope.md  feedback_agents_clean_pytest_artifacts.md  feedback_background_agent_stream_watchdog_timeout.md  feedback_check_functional_python_skill_first.md  feedback_economist_analyst_post_analytics_role.md  feedback_implementation_review_agents.md  feedback_no_code_in_specs_or_plans.md  feedback_no_merge_without_approval.md  feedback_no_parallel_agents_same_dir.md  feedback_notebook_citation_block.md  feedback_notebook_trio_checkpoint.md  feedback_onchain_native_priority.md  feedback_pathological_halt_anti_fishing_checkpoint.md  feedback_peer_agent_branch_interference.md  feedback_per_task_reviews_miss_integration_blocks.md  feedback_planning_dir_bespoke_naming.md  feedback_post_hoc_fit_anti_fishing_pattern.md  feedback_proceed_without_asking_auto_mode.md  feedback_push_origin_not_upstream.md  feedback_real_data_over_mocks.md  feedback_research_output_folder.md  feedback_schema_pre_flight_must_verify_values.md  feedback_scripts_only_scope.md  feedback_self_grading_vs_independent.md  feedback_specialized_agents_per_task.md  feedback_strict_tdd.md  feedback_three_way_review.md  feedback_two_wave_doc_verification.md  feedback_venv_activation.md  feedback_worktree_agents_no_subdispatch.md  project_abrigo_convex_instruments_inequality.md  project_abrigo_inequality_hedge_thesis.md  project_abrigo_painkiller_evidence_base.md  project_abrigo_two_tier_field_rule.md  project_ai_cost_v0_2_3_state.md  project_angstrom_fork.md  project_carbon_defi_attribution_celo.md  project_carbon_user_arb_partition_rule.md  (+46 more)
notes/: PRIMITIVES.md  STAGE_2_RESULTS.md  STOCHASTIC_FX_RESULTS.md  (+1 more)
(+346 files in other folders)
