[project]
name = "abrigo-analytics"
version = "0.1.0"
description = "Abrigo (Y, M, X) empirical-validation analytics: structural econometrics + on-chain panels for permissionless convex hedges"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "JMSBPP" }]

# Dependencies are pinned in requirements.txt to mirror the lockfile from
# the contracts/ source venv. Use `uv sync` after editing pyproject.toml,
# or `uv pip install -r requirements.txt` for an exact replica.
dependencies = [
    "duckdb>=1.5",
    "pandas>=2.2",
    "numpy>=2.0",
    "pyarrow>=18",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scipy>=1.13",
    "sympy>=1.14",
    "statsmodels>=0.14",
    "arch>=8.0",
    "linearmodels>=6.0",
    "jupyter>=1.0",
    "ipykernel>=7",
    "nbconvert>=7.16",
    "nbformat>=5.10",
    "papermill>=2.6",
    "requests>=2.32",
    "httpx>=0.28",
    "web3>=7",
    "huggingface-hub>=0.28",
    "datasets>=3.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "bibtexparser>=1.4",
    "tqdm>=4.67",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.7",
    "mypy>=1.13",
    "ty>=0.0.1a1",
    "hypothesis>=6.100",
    "mutmut>=2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "simulations"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests", "simulations/tests"]
pythonpath = ["."]
addopts = "-ra -q"

[tool.mutmut]
paths_to_mutate = [
    "simulations/types/",
    "simulations/modules/",
    "simulations/utils/",
]
tests_dir = ["simulations/tests/"]
do_not_mutate = [
    "simulations/**/__init__.py",
    "simulations/tests/**",
]
